[package]
name = "porkbun-ddns-rs"
description = "Porkbun Dynamic DNS"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/edoren/porkbun-ddns-rs"
license-file = "LICENSE"

[[bin]]
name = "porkbun_ddns"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
dirs = { version = "5" }
log = { version = "0.4" }
public-ip = { version = "0.2" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", default-features = false, optional = true }

[features]
vendored = ["openssl?/vendored"]
